syntax = "proto3";

package frame.proto;

// Material
// Next 10
message Material {
	// Name of the material.
	string name = 1;
	// Program reference.
	string program_name = 5;
	// Reference name of the texture names in the texture file.
	repeated string texture_names = 3;
	// Reference to the name inside the material in the shader file.
	repeated string inner_names = 4;
        // Reference name of the buffer names in the buffer file.
        repeated string buffer_names = 6;
        // Reference to the name inside the material in the shader file.
        repeated string inner_buffer_names = 7;
        // Reference name of the node transforms in the scene tree.
        repeated string node_names = 8;
        // Reference to the uniform name inside the material in the shader file.
        repeated string inner_node_names = 9;
}
